# local-transcription-for-therapy

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  NOTICE  README.en.md  README.md  THIRD_PARTY_LICENSES.md  package-lock.json  package.json  tauri.amd.dev.windows.override.json  tauri.amd.linux.override.json  tauri.amd.windows.override.json  tauri.build.amd-ubuntu.override.json  tauri.build.amd-windows.override.json  tauri.build.nvidia-ubuntu.override.json  tauri.build.nvidia-windows.override.json  tauri.cpu.dev.windows.override.json  tauri.cpu.ubuntu.override.json  tauri.cpu.windows.override.json  tauri.dev.linux.override.json  tauri.dev.windows.override.json  tauri.editor.dev.ubuntu.override.json  tauri.editor.dev.windows.override.json  tauri.editor.linux.override.json  tauri.editor.ubuntu.override.json  tauri.editor.windows.override.json  tauri.nvidia.linux.override.json  tauri.nvidia.windows.override.json
docs/: dev-runtime-emulation.md  development.md  irb-template.md  lgpl-pyav-build.md  offline-verification.md  privacy-guide.md  release-build-windows.md  release-notes-template.md  release-notes-v0.9.0.md  release-notes-v0.9.1.md  troubleshooting.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: Japanese.nsh  editor-hooks.nsh  lemonade-hooks.nsh  nvidia-hooks.nsh
src-tauri/resources/ffmpeg/: README.md
src-tauri/resources/lemonade/: .gitignore
src-tauri/resources/proofread/punctuation_rules/: named_entity_detection.json  punctuation_addition.json
src-tauri/src/: lib.rs
(+61 files in other folders)
