[package]
name = "offline-transcriber"
version = "0.1.0"
description = "Local Japanese transcription desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "offline_transcriber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
encoding_rs = "0.8"
regex = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
